# Argus

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: manage.py
app/apps/api/: permissions.py  urls.py
app/apps/calendar/: events.py  ical.py  models.py  urls.py  views.py
app/apps/catalog/: admin.py  api.py  forms.py  languages.py  localization.py  models.py  services.py  tasks.py  tracking.py  urls.py  views.py
app/apps/common/: apps.py  checks.py  procrastinate.py  urls.py  views.py
app/apps/home/: views.py
app/apps/movies/: admin.py  api.py  models.py  services.py  tasks.py  urls.py  views.py
app/apps/trakt/: admin.py  apps.py  changes.py  client.py  fields.py  identities.py  models.py  sync.py  tasks.py  urls.py  views.py
app/apps/tv/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
app/apps/users/: adapters.py  admin.py  apps.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
app/argus/: asgi.py  settings.py  urls.py  wsgi.py
app/templates/: offline.html
app/templates/admin/: base_site.html
app/templates/crispy-daisyui/: betterform.html
app/templates/includes/: mobile_navbar.html  scripts.html  sidebar.html  theme_toggle.html  toasts.html
app/templates/layouts/: base.html  base_auth.html
app/templates/users/: login.html
docker/dev/django/: Dockerfile  start
docker/dev/huey/: start
docker/dev/procrastinate/: start
docker/dev/supervisord/: supervisord.conf
frontend/: package-lock.json  package.json
frontend/src/: main.js
(+169 files in other folders)
