[project]
name = "argus"
version = "0.1.0"
description = "A self-hosted media tracker for movies, TV shows and anime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5==2026.3",
    "django~=5.2.15",
    "django-allauth[socialaccount]~=65.18.0",
    "django-browser-reload==1.21.0",
    "django-cachalot~=2.9.0",
    "django-cotton~=2.7.2",
    "django-crispy-forms==2.6",
    "django-debug-toolbar==6.3.0",
    "django-filter==25.2",
    "django-hijack==3.7.8",
    "django-pwa~=2.0.1",
    "django-vite==3.1.0",
    "djangorestframework~=3.17.1",
    "drf-spectacular~=0.29.0",
    "gunicorn==26.0.0",
    "huey~=2.5.0",
    "python-dateutil~=2.9.0.post0",
    "pytz>=2025.2",
    "watchfiles==1.2.0",
    "whitenoise[brotli]==6.12.0",
]

[tool.setuptools]
packages = ["app"]
